{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 44,
  "lineage": "efae0f8f-18f7-69d2-578b-c873f83e4646",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkInterfaces/app_nic",
            "internal_domain_name_suffix": "s0diouruqmlepklqzmcfefkqic.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal_app",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/app"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "app_nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-healthfast"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "app_nic",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.health_fast_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkInterfaces/web-nic",
            "internal_domain_name_suffix": "s0diouruqmlepklqzmcfefkqic.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/publicIPAddresses/web-public-ip",
                "subnet_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/web"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-ED-8D-1F-2D-94",
            "name": "web-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-healthfast",
            "virtual_machine_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Compute/virtualMachines/vmweb"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "web-nic",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_public_ip.web_ip",
            "azurerm_resource_group.health_fast_rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.health_fast_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/app",
            "location": "eastus",
            "name": "app",
            "resource_group_name": "rg-healthfast",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8080",
                  "8443"
                ],
                "direction": "Inbound",
                "name": "Allow-Web",
                "priority": 1200,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "app",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/db",
            "location": "eastus",
            "name": "db",
            "resource_group_name": "rg-healthfast",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SQL",
                "priority": 1300,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "db",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/web",
            "location": "eastus",
            "name": "web",
            "resource_group_name": "rg-healthfast",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 1100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "web",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app-Allow-Web",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "8080",
              "8443"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/app/securityRules/Allow-Web",
            "name": "Allow-Web",
            "network_security_group_name": "app",
            "priority": 1200,
            "protocol": "Tcp",
            "resource_group_name": "rg-healthfast",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-Web",
            "network_security_group_name": "app",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        },
        {
          "index_key": "db-Allow-SQL",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.3.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1433",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/db/securityRules/Allow-SQL",
            "name": "Allow-SQL",
            "network_security_group_name": "db",
            "priority": 1300,
            "protocol": "Tcp",
            "resource_group_name": "rg-healthfast",
            "source_address_prefix": "10.0.2.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-SQL",
            "network_security_group_name": "db",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        },
        {
          "index_key": "web-Allow-HTTP",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/web/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "web",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "rg-healthfast",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTP",
            "network_security_group_name": "web",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        },
        {
          "index_key": "web-Allow-HTTPS",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/web/securityRules/Allow-HTTPS",
            "name": "Allow-HTTPS",
            "network_security_group_name": "web",
            "priority": 1100,
            "protocol": "Tcp",
            "resource_group_name": "rg-healthfast",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTPS",
            "network_security_group_name": "web",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        },
        {
          "index_key": "web-Allow-SSH",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/web/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "web",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-healthfast",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-SSH",
            "network_security_group_name": "web",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/publicIPAddresses/web-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.117.148",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "web-public-ip",
            "resource_group_name": "rg-healthfast",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/app",
            "name": "app",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-healthfast",
            "virtual_network_name": "vnet-healthfast"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "app",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2",
            "virtual_network_name": "vnet-healthfast"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg",
            "azurerm_virtual_network.health_fast_vnet"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/db",
            "name": "db",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-healthfast",
            "virtual_network_name": "vnet-healthfast"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "db",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2",
            "virtual_network_name": "vnet-healthfast"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg",
            "azurerm_virtual_network.health_fast_vnet"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/web",
            "name": "web",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-healthfast",
            "virtual_network_name": "vnet-healthfast"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "web",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2",
            "virtual_network_name": "vnet-healthfast"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg",
            "azurerm_virtual_network.health_fast_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/app",
            "network_security_group_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/app",
            "subnet_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "azurerm_resource_group.health_fast_rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.health_fast_vnet"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/db",
            "network_security_group_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/db",
            "subnet_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "azurerm_resource_group.health_fast_rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.health_fast_vnet"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/web",
            "network_security_group_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/web",
            "subnet_id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "azurerm_resource_group.health_fast_rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.health_fast_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "health_fast_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "52878696-8334-4716-a970-cb0452155042",
            "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast",
            "location": "eastus",
            "name": "vnet-healthfast",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-healthfast",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/web",
                "name": "web",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/web"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/app",
                "name": "app",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/app"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/virtualNetworks/vnet-healthfast/subnets/db",
                "name": "db",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/98f81224-226a-46f0-b9b7-34bded3c97d2/resourceGroups/rg-healthfast/providers/Microsoft.Network/networkSecurityGroups/db"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-healthfast",
            "resource_group_name": "rg-healthfast",
            "subscription_id": "98f81224-226a-46f0-b9b7-34bded3c97d2"
          },
          "dependencies": [
            "azurerm_resource_group.health_fast_rg"
          ]
        }
      ]
    }
  ]
}